# TEASER-GUI

./: .gitignore  CMakeLists.txt  README.md  copy_dlls.bat  environment.yml  requirements.txt
GUI/: CMakeLists.txt  design_3dsmoothnet.ui  design_main_window.ui  main_cnn.py  main_window.py  point_cloud_window.py  render_option.json  run_GUI.py  smooth_net_window.py  teaser.cc
GUI/sdv/: bun_zipper_cloud.ply_0.150000_16_1.750000.csv
GUI/smooth_net_descriptors/32_dim/: bun_zipper_cloud.ply_0.150000_16_1.75.npz
examples/example_data/: bun_zipper_cloud.ply  bun_zipper_cloud_moved.ply
smooth_net/: main.cpp
smooth_net/core/: architecture.py  config.py  core.cpp  network.py  ops.py
